[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cipher-gateway"
version = "1.0.0"
description = "Python SDK for the Cipher MT5 Gateway — self-hosted MT5 trading infrastructure"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "CipherTrade", email = "dev@cipherbridge.cloud" }
]
requires-python = ">=3.10"
keywords = ["mt5", "metatrader", "trading", "forex", "gateway", "cipher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",          # httpx mock
]

[project.urls]
Homepage   = "https://cipherbridge.cloud"
Repository = "https://github.com/ciphertrade/cipher-gateway-python"
"Bug Tracker" = "https://github.com/ciphertrade/cipher-gateway-python/issues"

[tool.setuptools.packages.find]
# Only package the cipher_gateway directory — not tests or scripts
include = ["cipher_gateway*"]